--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World!</h1>
-<p>This is my first website!!! Im so excited.</p>
+<p>This is my first website!!! Im so excited.Since im pretty much busy with IRL stuffs, i cant upgrade it for days. Feel free to upgrade it <url=https://github.com/Fahomeister/fahomeister.github.io>here</url></p>
 </body>
 </html>
