--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="https://imgur.com/FYqyb1J">View post on imgur.com</a><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+<blockquote class="imgur-embed-pub" lang="en" data-id="FYqyb1J"><a href="https://imgur.com/FYqyb1J">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 <h1>Hello World!</h1>
 <p>This is my first website!!! Im so excited.Since im pretty much busy with IRL stuffs, i cant upgrade it for days. Feel free to upgrade it here</br>
 https://github.com/Fahomeister/fahomeister.github.io</p>
-</body>
-</html>
