--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2 id="likes-">Likes:</h2>
 <p>AAA gaming, Anime, Books, Tea.
  <em>Side note: You can merge Skills and likes as you like.</em> <br/></p>
-<p><img src="https://i.imgur.com/7fD4Sej.gif" alt="enter image description here"></p>
+<p><img src="https://i.imgur.com/7T1Q39z.gif" alt="enter image description here"></p>
 <h2 id="favourite-anime-genre-">Favourite Anime genre:</h2>
 <p>Psychological, Dark, Action, Myestry, Slice of Life</p>
 <h2 id="favourite-anime-manga-">Favourite Anime/Manga:</h2>
